--- a/style.css
+++ b/style.css
@@ -16,97 +16,271 @@ body{
   
 }
 
+
+/*menu*/
 .navbar{
     background-color: black;
-    display: flex;
-    justify-content:center;
-    align-items: center;
+    width:100%;
     height:4rem;
-    font-size: 1rem;     
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 0.9rem;  
+   
 }  
 
-
-.logo{
+.navbar .logo{
     color:white;
     font-size: 1.5rem;
-    padding:15px;
+    padding:0 0.8rem 0 4rem;
 }
 
-.navbar li{
-        display: inline-block;
-        padding:15px;
-        font-size: 1rem;
-    }
+.navbar ul{
+    display:flex;
+
+}
+
+.navlist li{
+    padding:1rem;
+}
+
+.navlist-right li{
+    padding:0.5rem;
+}
+.navbar ul.navlist{
+    flex:1;
+    margin-left:1rem;
+}
+
 
 .navbar a{
         color: white;
+       
+
     }
-    a:hover{
-        background-color: lightgray;
-        border-radius: 20%;
-        padding:10px;
-        opacity:1;
+.navbar a:hover{
+        background-color: rgb(80, 78, 78);
+        border-radius: 50%;
+        transition:color 5s;
+      
     }
 
-.lang{
-        margin-left:15rem;
-    }
+.menu-btn{
+    color:white;
+    cursor: pointer;
+    position: absolute;
+    top:1rem;
+    right:3rem;
+    z-index:2;
+    display: none;
+    
+}
+    
+    
 .navbar button {
-    padding:0.5rem 1rem;
-    border-radius:35%;
+    background-color:white;
+    color:black;
+    padding:0.6rem;
+    border-radius:10px ;
+    cursor: pointer;
+    margin-right:3rem;
+  
 }
 
-
+/*hero section*/
 .container{
-    width:100%;
+    max-width:100%;
     height:100vh;
+    margin-bottom: 4rem;
     background: url(hero\ image.webp) no-repeat center /cover ;
     display: flex;
     align-items: center;
+    justify-content:flex-start;
 }
 .card{
     background-color: white;
-    width:45%;
-    height:80%;
-    margin-left: 5rem;
+    max-width:35rem;
+    max-height:80%;
+    margin-left: 3rem;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: flex-start;    
+    justify-content: space-between;
+    align-items: center;   
+    flex:1;
+    padding:2rem;
+    
+  
 }
+/*trying to keep space between the elements*/
+
+.text p{
+    padding-bottom: 2rem;
+    padding-top:1rem;
+}
+.text h1{
+    font-size: 3rem;
+    font-weight:bold;
+    line-height:3rem;
+    padding-top: 0.5rem;
+    
+}
+.text button{
+    background-color: black;
+    color:white;
+    padding:1rem;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+
 .cardhead{
-   
     border-bottom: 1px solid lightgrey;
+    
 }
+
 .cardhead tr td {
-   padding: 0.5rem 4rem;
+    padding: 0.3rem 4rem;
+  
+ }
+   
  
-}
-.container2{
-    padding:4rem;
-}
-.cards{
-    display:grid;
-    grid-template-columns: 50% 50%;
-    gap:0.1rem;
-    padding:3rem;
-
-
-
-}
-.card1 img{
-    width:35rem;
-}
-.cards .card1{
     
 
+/*section2*/
+.contanier2{
+    padding: 0.2rem 4rem;
+    margin:0 auto;
+    
 }
+
+.contanier2 h1{
+     text-align: center;
+  }
+    
+
+.cards{
+    display:grid;
+    grid-template-columns:repeat(2, 1fr);
+    gap:2rem;
+    padding:3rem;
+
+}
+
+.card1 img{
+    width:35rem;
+    margin-bottom: 1.5rem;
+}
+.card1 h3{
+    margin-bottom: 1.5rem;
+    
+}
+
+  .card1 a{
+        display: inline-block;
+        color: black;
+        padding-top: 1.5rem;
+        padding-bottom: 0.5rem;
+        border-bottom:2px solid lightgrey;
+    }
+
+    .card1 a:hover{
+        animation: borderGrow 2s;
+        transition:color 5s;
+       
+
+    }
+
+
+.links{
+    background-color: black;
+    color:white
+}
+.inner-links{
+    max-width:100%;
+    margin:0 auto;
+    padding:0 3rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap:4rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+.inner-links li{
+    line-height: 2.5rem;
+   
+}
+.inner-links li a{
+    color:white;
+}
+
+
+
 
 .footer{
     background-color: black;
     color:white;
+   padding:4rem 0;
+
 }
-.social-links img{
-    width:5rem;
-    height:10rem ;
+.footer-inner{
+    max-width:100%;
+    margin:0 auto;
+    padding:5rem 3rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap:4rem;
+    align-items: flex-start;
+    justify-content: flex-start;
+  
 }
+.footer-inner .social-links {
+    padding: 0 2rem;
+    margin
+}
+
+.footer-inner .social-links a{
+    color: white;
+    padding: 0 0.5rem;
+
+}
+
+.footer-inner img{
+    width:8rem;
+    height:4rem ;
+    
+}
+.footer .copyrights{
+    display: flex;
+    
+}
+
+@media (max-width:700px){
+.menu-btn{
+    display: block;
+}
+
+.navbar ul.navlist {
+    display: none;
+}
+.navbar ul.navlist-right{
+    display: none;
+
+}
+.navbar button{
+    margin-right: 6rem;
+}
+
+
+    .inner-links, .footer-inner {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .cards{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+
+    
